--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dabbabot",
+  "name": "dabbabot",
   "version": "1.0.0",
   "private": true,
   "description": "This is bot designed for the advance workflow management for great organizations",
